src/PLASMA/NDDL/test/nddl/error/UndefinedPredicateArgument.nddl

class foo
{
    predicate bar {int x;}
}

foo::bar
{
    eq(x,5);
    eq(y,6);
}
